--- a/MinhaApiCore/appsettings.json
+++ b/MinhaApiCore/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=DESKTOP-B76722G\\SQLEXPRESS;Database=MinhaApiCore;Trusted_Connection=true;MultipleActiveResultSets=true"
+  }
 }
